--- a/lesson3驟榊ｸ・cake/VC3.css
+++ b/lesson3驟榊ｸ・cake/VC3.css
@@ -8,7 +8,8 @@ img{
       }
 
 .cakes{
-       background-color: #88fc04;
+       background-color: #fce2c4
+;
        float:left;
        width: 40%;
     }
