--- a/lesson3驟榊ｸ・cake/VC3.css
+++ b/lesson3驟榊ｸ・cake/VC3.css
@@ -8,8 +8,7 @@ img{
       }
 
 .cakes{
-       background-color: #fce2c4
-;
+       background-color: #fce2c4;
        float:left;
        width: 40%;
     }
