--- a/lesson3驟榊ｸ・cake/VC3.css
+++ b/lesson3驟榊ｸ・cake/VC3.css
@@ -3,6 +3,10 @@ img{
     margin: 5px 10px 15px 20px;
     }
 
+p{
+    margin: 5px 10px 15px 20px;
+    }
+
 .shop{
       background-color: #F78486;
       width: 100%;
