--- a/lesson3驟榊ｸ・cake/VC3.css
+++ b/lesson3驟榊ｸ・cake/VC3.css
@@ -1,10 +1,12 @@
 img{
     width: 100%;
     margin: 5px 10px 15px 20px;
+    padding: 5px 10px 15px 20px;
     }
 
 p{
     margin: 5px 10px 15px 20px;
+    padding: 5px 10px 15px 20px;
     }
 
 .shop{
