--- a/lesson3驟榊ｸ・cake/VC3.css
+++ b/lesson3驟榊ｸ・cake/VC3.css
@@ -9,6 +9,11 @@ p{
     padding: 5px 10px 15px 20px;
     }
 
+h2{
+    margin: 5px 10px 15px 20px;
+    padding: 5px 10px 15px 20px;
+    }
+
 .shop{
       background-color: #F78486;
       width: 100%;
