--- a/lesson3驟榊ｸ・cake/VC3.css
+++ b/lesson3驟榊ｸ・cake/VC3.css
@@ -1,14 +1,14 @@
 img{
     width: 70%;
-    margin: 20px 20px 20px 20px;
+    margin: 15px;
     }
 
 p{
-    margin: 20px 20px 20px 20px;
+    margin: 15px;
     }
 
 h2{
-    margin: 20px 20px 20px 20px;
+    margin: 15px;
     }
 
 .shop{
